# trove-depreciated

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.md  notes.md
.github/workflows/: tests.yml
examples/: brainstorming.trove  helloworld.trove
examples/annotations/: macro-annotations.trove  memory.trove  processor.trove
examples/borrow checker/: basic.trove
examples/comptime/: expression_guards.trove
examples/concurrency/: concurrency.trove  task_checker.trove
examples/errors/: errors.trove
examples/generics/: generics.trove  generics_via_introspection.trove  typeguard.trove
examples/kernel/: v1.trove  v2.trove
examples/loops/: generators.trove
examples/macros/: builtin.trove  macro.trove
examples/variables/: variables.trove
examples/virtues/: generator.trove  virtue.trove
examples/watchmen/: watchmen.trove
scripts/: build.bat  build_and_run.bat  build_and_run_tests.bat  build_and_run_tests.sh  clean.bat
src/: analyse.cpp  analyse.h  ast.cpp  ast.h  borrowchecker.cpp  borrowchecker.h  cgenerator.cpp  cgenerator.h  cli.h  clr.h  clrgenerator.h  error.cpp  error.h  lexer.cpp  lexer.h  log.cpp  log.h  parser.cpp  parser.h  pass1.cpp  pass1.h  position.h  symtable.h  token.cpp  token.h  trove.cpp  trove.h  type.cpp  type.h  typecheck.cpp  typecheck.h  types.h  unit.cpp  unit.h
tests/: CMakeLists.txt  test_example.cpp  test_lexer.cpp  test_parser.cpp  test_sym_table.cpp  test_token.cpp  test_type.cpp  test_types.cpp
tests/trove/: helloworld.trove  io.trove  main.trove  test.trove  test1.trove  test2.trove
tests/trove/sub/: test2.trove
tests/x64/Debug/RUN_TESTS/: RUN_TESTS.recipe
tests/x64/Debug/RUN_TESTS/RUN_TESTS.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  RUN_TESTS.lastbuildstate
